--- a/command/pom.xml
+++ b/command/pom.xml
@@ -22,7 +22,7 @@
         <jgitver-maven-plugin.version>1.9.0</jgitver-maven-plugin.version>
         <maven-surefire-plugin.version>3.5.0</maven-surefire-plugin.version>
         <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
-        <dependency-check-maven.version>10.0.3</dependency-check-maven.version>
+        <dependency-check-maven.version>10.0.4</dependency-check-maven.version>
         <maven-checkstyle-plugin.version>3.5.0</maven-checkstyle-plugin.version>
         <spotbugs-maven-plugin.version>4.8.6.2</spotbugs-maven-plugin.version>
         <sb-contrib.version>7.6.4</sb-contrib.version>
@@ -216,6 +216,7 @@
                     <failBuildOnCVSS>7</failBuildOnCVSS>
                     <!--<nvdApiKey>GET AN API KEY FROM https://nvd.nist.gov/developers/request-an-api-key </nvdApiKey>-->
                     <nvdApiKeyEnvironmentVariable>NVD_API_KEY</nvdApiKeyEnvironmentVariable>
+                    <failOnError>false</failOnError>
                 </configuration>
                 <executions>
                     <execution>
