--- a/cloud-gateway/src/main/resources/application.yaml
+++ b/cloud-gateway/src/main/resources/application.yaml
@@ -30,14 +30,14 @@ spring:
           - id: query-product
             uri: http://localhost:8082
             predicates:
-              - Path=/**
+              - Path=/products
               - Method=GET
             filters:
               - authentication
           - id: command-product
             uri: http://localhost:8081
             predicates:
-              - Path=/**
+              - Path=/products
             filters:
               - authentication
               - name: authorization
